# digit-recognizer

./: .gitignore  README.md  keras_digit_recognizer.ipynb  package.json
frontend/: package-lock.json  package.json
frontend/public/: index.html  model.json
frontend/src/: App.tsx  index.css  utils.ts
frontend/src/components/: Canvas.tsx  PredictionDisplay.tsx
frontend/src/wasm/: imageProcesser.ts  image_processing.d.ts  image_processing.js  image_processing_bg.js  image_processing_bg.ts  image_processing_bg.wasm  image_processing_bg.wasm-opt.wasm  image_processing_bg.wasm.d.ts
image-processing/: Cargo.toml  build.sh
image-processing/src/: lib.rs
