[package]
name = "image-processing"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.76"
image = "0.23.14"
wasm-bindgen-test = "0.3.26"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.53"
features = [
	'ImageData',
	'console',
	'CanvasRenderingContext2d'
]

[dependencies.js-sys]
version = "0.3.53"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false